BUG#15425 Small window for NF during backup failing without error

ndb/src/kernel/blocks/backup/Backup.cpp:
  If crash 10018 is inserted on a 2 node cluster with fast CPU and slower disk,
  all nodes can respond with BACKUP_FRAGMENT_CONF for all fragments before the
  error in FSAPPENDCONF is hit.
  
  This would mean that no error code was set for the backup and that it would
  be incomplete as not all IO had been written to disk before the node crash.
  This would not be reported to the user.
  
  So the backup would appear to succeed but it really didn't.
  
  The window for this is rather small though.
ndb/src/kernel/blocks/dbdict/Dbdict.cpp:
  Assert is incorrect for testBackup NFSlave test (causes crash insert 10015 to fail)